--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -10,7 +10,7 @@ svg {
 
 #canvas {
     position: relative;
-    height: 590px;
+    height: 700px;
     border: solid 1px #222;
     background: #222;
     -moz-border-radius: 10px;
@@ -18,6 +18,11 @@ svg {
     border-radius: 10px;
 }
 
+#textbox {
+    position: absolute;
+    top: 100px;
+    right: 0px;
+}
 #loading {
     position: relative;
     width: 569px;
