cleaned up style.css

--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -21,7 +21,7 @@ svg {
 #textbox {
     position: absolute;
     top: 100px;
-    right: 0px;
+    /*right: 0px;*/
 }
 #loading {
     position: relative;
