--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -1,11 +1,72 @@
-body {
-    background: black;
-}
-
 svg {
    top: 0 !important;
    left: 0 !important;
    position: absolute !important;
+}
+
+.custom-color {
+    background-color: #8cbf26;
+}
+
+.custom-form-control-color:focus {
+  border-color: #8cbf26;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+}
+
+.custom-form-control-color input[type="checkbox"]:checked {
+  color: #8cbf26;
+}
+
+.divider-vertical {
+    height: 300px;
+    border-left: 1px solid gray;
+    /*float: left;*/
+    opacity: 0.5;
+    margin-top: 15px;
+}
+
+.custom-navbar-color {
+    /*background-color: white;*/
+}
+
+.custom-foreground-color {
+    background-color: white;
+}
+
+.custom-square {
+    border-radius: 0px;
+}
+
+.custom-form-align {
+    padding-top: 15px;
+    /*padding-bottom: 15px;*/
+    /*height: 1000px;*/
+}
+
+.viewport-select {
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.viewport-select.responsive-center {
+    /*width: 50%;*/
+    /*min-width: 300px;*/
+    /*max-width: 400px;*/
+    height: 50%;
+    /*padding: 40px;*/
+}
+
+.viewport-select.login-background {
+    width: 90%;
+    height: 90%;
+    min-width: 500px;
+    max-width: 960px;
+    background: #777777;
+    border: solid 3px;
+    border-color: #BBBB00;
 }
 
 #canvas {
